program configration ,CORS and IIS integrated

--- a/CompanyEmployees/appsettings.Development.json
+++ b/CompanyEmployees/appsettings.Development.json
@@ -1,3 +1,4 @@
+//for development environment if you add productio nenvironment (add another file )"you can see what environment you work for "
 {
   "Logging": {
     "LogLevel": {
