add miggration and initial data for models

--- a/CompanyEmployees/appsettings.json
+++ b/CompanyEmployees/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Provider=SQLOLEDB.1;Integrated Security=SSPI;Persist Security Info=False;Initial Catalog==CompanyEmployee;Data Source=.,"
+    "sqlConnection": " server=.; database=CompanyEmployee; Integrated Security=true;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
