service layer for model and serviceManger

--- a/CompanyEmployees/CompanyEmployees.csproj
+++ b/CompanyEmployees/CompanyEmployees.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Repository\Repository.csproj" />
+    <ProjectReference Include="..\Service\Service.csproj" />
   </ItemGroup>
 
 </Project>
