--- a/CompanyEmployees/appsettings.json
+++ b/CompanyEmployees/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "sqlConnection": " server=.; database=CompanyEmployee; Integrated Security=true;TrustServerCertificate=True"
   },
+  "JwtSettings": {
+    "validIssuer": "Sanad",
+    "validAudience": "https://github.com/SANADASHRAF",
+    "expires": 5
+  },
   "AllowedHosts": "*"
 }
